[package]
name = "iced_example"
version = "0.1.0"
edition = "2021"
authors = ["lost22git"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.8.0", default-features = false, features = [
    "glow",
    "debug",
] }
image = { version = "0.24.5", features = ["png"] }

[profile.opt]
inherits = "release"
lto = true
opt-level = "z"
codegen-units = 1
